<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="api_map_key">AIzaSyDBd9BYtE13_5X0nfbOzqhwqA4OfPbX6_M</string>
    <string name="kakao_app_key">708ce72eae3ef4c13e303f2291fbd00b</string>
    
    <string name="admob_add_full">ca-app-pub-9489297717026983/2594941359</string>
    <string name="admob_add_footer">ca-app-pub-9489297717026983/8641474956</string>
    <string name="admob_add_header">ca-app-pub-9489297717026983/5408806953</string>
    <!-- Common -->
    <string name="app_name">TimeAttack</string>
    <string name="action_settings">Settings</string>
    
    <string name="drawer_open">DrawerOpen</string>
    <string name="drawer_close">DrawerClose</string>
    
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="alert">Alert</string>
    
    <string name="find_subway_nearby">Subway Near by</string>
    <string name="find_direction">find trasit way</string>
    
    <!-- Error Message -->
    <string name="error_location_out_of_service">Do no you GPS service.</string>
    <string name="error_network_request_fail">Fail network connection.</string>
    <string name="error_zero_result_nearby_subway">No subway in Radius %s</string>
    
    <!--Drawer Texts -->
    <string name="drawer_home">Home</string>
    <string name="drawer_map">Map</string>
    <string name="drawer_search_address">Search address</string>
    <string name="drawer_near_by">Find nearby</string>
    <string name="drawer_direction">Find way</string>
    
    <string name="drawer_login">Login !</string>
    
    <!-- Fragment -->
    <string name="recently_infomation">Recently used</string>
    <string name="recently_search_address">Recently searched address</string>
    <string name="recently_search_place">Recently searched nearby</string>
    <string name="recently_infomation_empty">No data.</string>
    
    <string name="nearby_subway_infomation_empty">No subway around here.</string>
    
    <!-- Map Fragment -->
    <string name="show_map">Show map</string>
    <string name="hide_map">Close map</string>
    
    <!-- Setting -->
    <string name="setting_map">Setting map</string>
    <string name="setting_map_type">Setting map type</string>
    <string name="setting_map_touch">Setting map interaction</string>
    <string name="setting_map_radius">Setting nearby radius value</string>
    <string name="setting_map_rotation">Rotation map</string>
    <string name="setting_map_zoom_button">Showing Zoom button</string>
    <string name="setting_account">Setting Account</string>
    
    <string name="setting_map_normal">Normal</string>
    <string name="setting_map_satellite">Satellite</string>
    <string name="setting_map_terrain">Terrain</string>
    <string name="setting_map_hybrid">Hybrid</string>
    
    <string name="setting_account_kakao_unlink">Unlink Kakao account</string>
  
    
    <!-- NearbyFragment -->
    <string name="near_by_search_hint">Search location</string>
    <string name="current_loaction">Current location</string>
    
    <!-- Search Activity -->
    <string name="location_search">Search location</string>
    
    <!-- ActionBar Items -->
    <string name="actionbar_search">Search</string>
    <string name="actionbar_current_location">Current location</string>
    <string name="actionbar_map">Map</string>
    <string name="actionbar_place">Find nearby</string>
    <string name="actionbar_direction">Find way</string>
    <string name="actionbar_setting">Setting</string>
    
    <!-- Main -->
    <string name="activity_home">TimeAttack</string>
    <string name="activity_map">Map infomation</string>
    
    <!-- Search -->
    <string name="input_location_place_message">Please input location.</string>
    <string name="invalid_location_place_message">Please check location name and try again</string>
    
    <!-- Location Infomation -->
    <string name="location_infomation">Location infomation</string>
    <string name="location_address">Address</string>
	<string name="location_postal_code">Postal code</string>
    <string name="location_latitude">Latitude</string>
    <string name="location_longitude">Longitude</string>
    <string name="location_type">Address</string>
    
    <string name="location_address_message">Address\n%s\n</string>
    <string name="location_postal_code_message">Postal code (%s)\n</string>
    <string name="location_latlng_message" formatted="false">Latitude,Longitude (%s, %s)</string>
    
    <!-- NearBy -->
    <string name="station">Station</string>
    <string name="detail_info">Detail infomation</string>

</resources>
